# hydrostat

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env-example  pyproject.toml
backend/api/: Dockerfile  requirements.txt
backend/api/app/: main.py
backend/api/src/: main.py
backend/db/: Dockerfile  main.py  models.py  seed_data.py  seed_db.py
backend/db/scripts/: dump.sql  init.sql  seed_data.py  seed_db.py
backend/db/tests/: dockerignore.test.py
webui/: .prettierignore  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
webui/src/: App.tsx
